# ix-remove-mismatched

./: pyproject.toml
fix_img_dir/: __main__.py
