[tool.poetry]
name = "fix-img-dir"
version = "0.1.0"
description = ""
authors = ["Taylor Denouden <taylor.denouden@hakai.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
typer = "^0.9.0"

[tool.poetry.scripts]
fix-img-dir = "fix_img_dir.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
